// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyHighlights button and PopUp changes colors based on book theme 1`] = `
<div
  className="PopupStyles__PopupWrapper-w0z1hl-0 cYcgUJ"
>
  <div
    className="ScrollLock__Overlay-sc-1fi845b-0 hgpadh"
    data-testid="scroll-lock-overlay"
    onClick={[Function]}
  />
  <div
    className="PopupStyles__Modal-w0z1hl-3 ZJcjg"
    data-testid="highlights-popup-wrapper"
    tabIndex="-1"
  >
    <h3
      className="headings__H3-sc-1xfiggv-2 PopupStyles__Header-w0z1hl-1 jRmTqB"
    >
      My Highlights and Notes
      <button
        aria-label="Close My Highlights"
        className="Button__PlainButton-ayg7nk-2 PopupStyles__CloseIconWrapper-w0z1hl-4 jafVNy"
        data-testid="close-highlights-popup"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="PopupStyles__CloseIcon-w0z1hl-5 heBLJR"
          focusable="true"
          height="15px"
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </button>
    </h3>
    <div
      className="PopupStyles__PopupBody-w0z1hl-2 ShowMyHighlightsStyles__ShowMyHighlightsBody-idlhpx-0 fAYtqg"
      data-analytics-region="MH popup"
      data-testid="show-myhighlights-body"
    >
      <div
        className="Filters-sc-1fn81fx-2 cJUIZf"
      >
        <div
          className="Dropdown-rmc6yw-5 fBPFfC Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv"
        >
          <button
            aria-label="Filter highlights by Chapter"
            className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF Filters__Toggle-sc-1fn81fx-1 iVriBh Button__PlainButton-ayg7nk-2 chgswm"
            onClick={[Function]}
          >
            <div
              tabIndex={-1}
            >
              Chapter
              <svg
                aria-hidden="true"
                className="Filters__DownIcon-sc-1fn81fx-0 hoQnJB StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 320 512"
              >
                <path
                  d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          className="Dropdown-rmc6yw-5 fBPFfC Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv"
        >
          <button
            aria-label="Filter highlights by Color"
            className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF Filters__Toggle-sc-1fn81fx-1 iVriBh Button__PlainButton-ayg7nk-2 chgswm"
            onClick={[Function]}
          >
            <div
              tabIndex={-1}
            >
              Color
              <svg
                aria-hidden="true"
                className="Filters__DownIcon-sc-1fn81fx-0 hoQnJB StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 320 512"
              >
                <path
                  d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <button
          aria-label="print"
          className="styled__PlainButton-sc-1119auh-0 PrintButton-sc-1bdptk0-0 jBnoSm styled__PrintOptWrapper-sc-1119auh-1 kbtaBS"
          data-testid="print"
          disabled={false}
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="styled__PrintIcon-sc-1119auh-3 iKTgDK StyledIconBase-sc-bdy9j4 cCvWXa"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
              fill="currentColor"
            />
          </svg>
          <span
            className="styled__PrintOptions-sc-1119auh-2 bRCGrc"
          >
            Print
          </span>
        </button>
        <ul
          className="FiltersList-sc-1sdnk9e-3 fQoHdD"
        />
      </div>
      <div
        className="HighlightsWrapper-vefi0f-0 kuspas"
      >
        <div
          className="HighlightStyles__GeneralTextWrapper-ciqz65-12 HighlightStyles__GeneralLeftText-ciqz65-14 fAZQtv"
        >
          You have no highlights in this book
        </div>
        <div
          className="HighlightStyles__MyHighlightsWrapper-ciqz65-13 cKsdAu"
        >
          <h3
            className="headings__H3-sc-1xfiggv-2 HighlightStyles__GeneralText-ciqz65-11 dOBvfn"
          >
            Make a highlight and add a note
          </h3>
          <div
            className="HighlightStyles__GeneralTextWrapper-ciqz65-12 gKDJEa"
          >
            Then use this page to create your own study guide
          </div>
          <img
            className="HighlightStyles__MyHighlightsImage-ciqz65-16 eSPeZM"
            src="MHpage-empty-logged-in.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MyHighlights button and PopUp changes colors based on book theme 2`] = `
<div
  className="PopupStyles__PopupWrapper-w0z1hl-0 cYcgUJ"
>
  <div
    className="ScrollLock__Overlay-sc-1fi845b-0 hgpadh"
    data-testid="scroll-lock-overlay"
    onClick={[Function]}
  />
  <div
    className="PopupStyles__Modal-w0z1hl-3 ZJcjg"
    data-testid="highlights-popup-wrapper"
    tabIndex="-1"
  >
    <h3
      className="headings__H3-sc-1xfiggv-2 PopupStyles__Header-w0z1hl-1 indhXI"
    >
      My Highlights and Notes
      <button
        aria-label="Close My Highlights"
        className="Button__PlainButton-ayg7nk-2 PopupStyles__CloseIconWrapper-w0z1hl-4 jafVNy"
        data-testid="close-highlights-popup"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="PopupStyles__CloseIcon-w0z1hl-5 YYgY"
          focusable="true"
          height="15px"
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </button>
    </h3>
    <div
      className="PopupStyles__PopupBody-w0z1hl-2 ShowMyHighlightsStyles__ShowMyHighlightsBody-idlhpx-0 fAYtqg"
      data-analytics-region="MH popup"
      data-testid="show-myhighlights-body"
    >
      <div
        className="Filters-sc-1fn81fx-2 cJUIZf"
      >
        <div
          className="Dropdown-rmc6yw-5 fBPFfC Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv"
        >
          <button
            aria-label="Filter highlights by Chapter"
            className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF Filters__Toggle-sc-1fn81fx-1 iVriBh Button__PlainButton-ayg7nk-2 chgswm"
            onClick={[Function]}
          >
            <div
              tabIndex={-1}
            >
              Chapter
              <svg
                aria-hidden="true"
                className="Filters__DownIcon-sc-1fn81fx-0 hoQnJB StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 320 512"
              >
                <path
                  d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          className="Dropdown-rmc6yw-5 fBPFfC Dropdown__TabHiddenDropDown-rmc6yw-1 kbMrSv"
        >
          <button
            aria-label="Filter highlights by Color"
            className="Dropdown__DropdownToggle-rmc6yw-0 gpiKKF Filters__Toggle-sc-1fn81fx-1 iVriBh Button__PlainButton-ayg7nk-2 chgswm"
            onClick={[Function]}
          >
            <div
              tabIndex={-1}
            >
              Color
              <svg
                aria-hidden="true"
                className="Filters__DownIcon-sc-1fn81fx-0 hoQnJB StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 320 512"
              >
                <path
                  d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <button
          aria-label="print"
          className="styled__PlainButton-sc-1119auh-0 PrintButton-sc-1bdptk0-0 jBnoSm styled__PrintOptWrapper-sc-1119auh-1 kbtaBS"
          data-testid="print"
          disabled={false}
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="styled__PrintIcon-sc-1119auh-3 iKTgDK StyledIconBase-sc-bdy9j4 cCvWXa"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
              fill="currentColor"
            />
          </svg>
          <span
            className="styled__PrintOptions-sc-1119auh-2 bRCGrc"
          >
            Print
          </span>
        </button>
        <ul
          className="FiltersList-sc-1sdnk9e-3 fQoHdD"
        />
      </div>
      <div
        className="HighlightsWrapper-vefi0f-0 kuspas"
      >
        <div
          className="HighlightStyles__GeneralTextWrapper-ciqz65-12 HighlightStyles__GeneralLeftText-ciqz65-14 fAZQtv"
        >
          You have no highlights in this book
        </div>
        <div
          className="HighlightStyles__MyHighlightsWrapper-ciqz65-13 cKsdAu"
        >
          <h3
            className="headings__H3-sc-1xfiggv-2 HighlightStyles__GeneralText-ciqz65-11 dOBvfn"
          >
            Make a highlight and add a note
          </h3>
          <div
            className="HighlightStyles__GeneralTextWrapper-ciqz65-12 gKDJEa"
          >
            Then use this page to create your own study guide
          </div>
          <img
            className="HighlightStyles__MyHighlightsImage-ciqz65-16 eSPeZM"
            src="MHpage-empty-logged-in.png"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
